--- a/index.html
+++ b/index.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="wrap">
+        <div class="main">
+            <div class="myInfo">
+                <h2>Front-End Developer</h2>
+                <h1>Krasulia Yulii</h1>
+                <p></p>
+            </div>
+
+            <div class="myProjects">
+                <h3>Projects</h3>
+                <ol>
+                    <li>
+                        <a href="https://hellen.p.goit.global/" target="_blank">https://hellen.p.goit.global/</a>
+                        ................... [ HTML5, CSS3 ]
+                    </li>
+                    <li>
+                        <a href="https://cryptohub.p.goit.global/" target="_blank">https://cryptohub.p.goit.global/</a>
+                        ............. [ JavaScript ]
+                    </li>
+                    <li>
+                        <a href="https://kidslike.p.goit.global/" target="_blank">https://kidslike.p.goit.global/</a>
+                        ................ [ React.js, Node.js ]
+                    </li>
+
+                </ol>
+            </div>
+            <div class="company">
+                <h3>Work Experience</h3>
+                <div class="company__one">
+                    <h4>Front-End Developer Freelance </h4>
+                    <p>September 2019 - up to now | Country</p>
+                    <ul>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                        <li>
+                            Risus commodo viverra maecenas.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+                        </li>
+                    </ul>
+                </div>
+                <div class="company__two">
+                    <h4>Manager Banderogusak & Co.</h4>
+                    <p>March 2015 - October 2018 | Country</p>
+                    <ul>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                        <li>
+                            Risus commodo viverra maecenas.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+                        </li>
+                    </ul>
+                </div>
+                <div class="company__three">
+                    <h4>Manager BestUA Corp.</h4>
+                    <p>June 2014 - February 2015 | Country</p>
+                    <ul>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                        <li>
+                            Risus commodo viverra maecenas.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+                        </li>
+                    </ul>
+                </div>
+                <div class="educ">
+                    <div>
+                        <h3>Education</h3>
+                        <div>
+                            <h4>National University of Management</h4>
+                            <p><b>Management</b></p>
+                            <p>June 2014 - February 2015 | Country</p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <aside>
+            
+        </aside>
+    </div>
 </body>
+
 </html>
