--- a/index.html
+++ b/index.html
@@ -109,7 +109,54 @@
 
         </div>
         <aside>
-            
+            <img src="img/Frame 1.png" alt="photo" width="370">
+            <div class="contacts">
+                <h3>Contacts</h3>
+                <p>C: <a href="tel:+388888888888">+38 888 888 88 88</a></p>
+                <p>E: <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+            </div>
+            <div class="techskills">
+                <h3>Tech Skills</h3>
+                <ul>
+                    <li>
+                        HTML5
+                    </li>
+                    <li>
+                        CSS3
+                    </li>
+                    <li>
+                        GIT
+                    </li>
+                    <li>
+                        Webpack
+                    </li>
+                    <li>
+                        JavaScript
+                    </li>
+                    <li>
+                        React.js
+                    </li>
+                    <li>
+                        Node.js
+                    </li>
+                </ul>
+            </div>
+            <div class="softskills">
+                <ul>
+                    <li>
+                        Scrum
+                    </li>
+                    <li>
+                        Agile
+                    </li>
+                    <li>
+                        GTD
+                    </li>
+                    <li>
+                        Teamwork
+                    </li>
+                </ul>
+            </div>
         </aside>
     </div>
 </body>
