--- a/index.html
+++ b/index.html
@@ -112,55 +112,60 @@
             </div>
 
         </div>
-        <aside>
+        <aside class="sidebar">
             <img src="img/Frame 1.png" alt="photo" width="370">
-            <div class="contacts">
-                <h3>Contacts</h3>
-                <p>C: <a href="tel:+388888888888">+38 888 888 88 88</a></p>
-                <p>E: <a href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+
+            <div class="sidebar__content">
+                <div class="contacts">
+                    <h3 class="contacts__title">Contacts</h3>
+                    <p class="contacts__item"><span class="contacts__type">C: </span><a class="contacts__link" href="tel:+388888888888">+38 888 888 88 88</a></p>
+                    <p class="contacts__item"><span class="contacts__type">E: </span><a class="contacts__link" href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+                </div>
+                <div class="techskills">
+                    <h3 class="techskills__title">Tech Skills</h3>
+                    <ul class="skills__list">
+                        <li class="skills__list-item">
+                            HTML5
+                        </li>
+                        <li class="skills__list-item">
+                            CSS3
+                        </li>
+                        <li class="skills__list-item">
+                            GIT
+                        </li>
+                        <li class="skills__list-item">
+                            Webpack
+                        </li>
+                        <li class="skills__list-item">
+                            JavaScript
+                        </li>
+                        <li class="skills__list-item">
+                            React.js
+                        </li>
+                        <li class="skills__list-item">
+                            Node.js
+                        </li>
+                    </ul>
+                </div>
+                <div class="softskills">
+                    <h3 class="softskills__title">Soft Skills</h3>
+                    <ul class="softskills__list">
+                        <li class="softskills__list-item">
+                            Scrum
+                        </li>
+                        <li class="softskills__list-item">
+                            Agile
+                        </li>
+                        <li class="softskills__list-item">
+                            GTD
+                        </li>
+                        <li class="softskills__list-item">
+                            Teamwork
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="techskills">
-                <h3>Tech Skills</h3>
-                <ul>
-                    <li>
-                        HTML5
-                    </li>
-                    <li>
-                        CSS3
-                    </li>
-                    <li>
-                        GIT
-                    </li>
-                    <li>
-                        Webpack
-                    </li>
-                    <li>
-                        JavaScript
-                    </li>
-                    <li>
-                        React.js
-                    </li>
-                    <li>
-                        Node.js
-                    </li>
-                </ul>
-            </div>
-            <div class="softskills">
-                <ul>
-                    <li>
-                        Scrum
-                    </li>
-                    <li>
-                        Agile
-                    </li>
-                    <li>
-                        GTD
-                    </li>
-                    <li>
-                        Teamwork
-                    </li>
-                </ul>
-            </div>
+
         </aside>
     </div>
 </body>
