done with day 5 (repid)

--- a/index.html
+++ b/index.html
@@ -16,84 +16,86 @@
     <div class="wrap">
         <div class="main">
             <div class="myInfo">
-                <h2>Front-End Developer</h2>
-                <h1>Krasulia Yulii</h1>
-                <p></p>
+                <h2 class="my__profession">Front-End Developer</h2>
+                <h1 class="my__name">Krasulia Yulii</h1>
+                <p class="my__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+                    accumsan lacus vel facilisis. </p>
             </div>
 
             <div class="myProjects">
-                <h3>Projects</h3>
-                <ol>
-                    <li>
-                        <a href="https://hellen.p.goit.global/" target="_blank">https://hellen.p.goit.global/</a>
-                        ................... [ HTML5, CSS3 ]
+                <h3 class="myProjects__title">Projects</h3>
+                <ol class="myProjects__list">
+                    <li class="myProjects__item">
+                        <a class="myProjects__item-link" href="https://hellen.p.goit.global/" target="_blank">https://hellen.p.goit.global/</a>
+                        <span class="myProjects__item-tech">...................... [ HTML5, CSS3 ]</span>
                     </li>
-                    <li>
-                        <a href="https://cryptohub.p.goit.global/" target="_blank">https://cryptohub.p.goit.global/</a>
-                        ............. [ JavaScript ]
+                    <li class="myProjects__item">
+                        <a class="myProjects__item-link" href="https://cryptohub.p.goit.global/" target="_blank">https://cryptohub.p.goit.global/</a>
+                        <span class="myProjects__item-tech">............. [ JavaScript ]</span>
                     </li>
-                    <li>
-                        <a href="https://kidslike.p.goit.global/" target="_blank">https://kidslike.p.goit.global/</a>
-                        ................ [ React.js, Node.js ]
+                    <li class="myProjects__item">
+                        <a class="myProjects__item-link" href="https://kidslike.p.goit.global/" target="_blank">https://kidslike.p.goit.global/</a>
+                        <span class="myProjects__item-tech">................... [ React.js, Node.js ]</span>
                     </li>
 
                 </ol>
             </div>
             <div class="company">
-                <h3>Work Experience</h3>
+                <h3 class="company__exp-title">Work Experience</h3>
                 <div class="company__one">
-                    <h4>Front-End Developer Freelance </h4>
-                    <p>September 2019 - up to now | Country</p>
-                    <ul>
-                        <li>
+                    <h4 class="company__exp-prof">Front-End Developer <span>Freelance</span></h4>
+                    <p class="company__exp-period">September 2019 - up to now <span>|</span> Country</p>
+                    <ul class="company__duties-list">
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Risus commodo viverra maecenas.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
                         </li>
                     </ul>
                 </div>
                 <div class="company__two">
-                    <h4>Manager Banderogusak & Co.</h4>
-                    <p>March 2015 - October 2018 | Country</p>
-                    <ul>
-                        <li>
+                    <h4 class="company__exp-prof">Manager <span>Banderogusak & Co.</span></h4>
+                    <p class="company__exp-period">March 2015 - October 2018 <span>|</span> Country</p>
+                    <ul class="company__duties-list">
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Risus commodo viverra maecenas.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
                         </li>
                     </ul>
                 </div>
                 <div class="company__three">
-                    <h4>Manager BestUA Corp.</h4>
-                    <p>June 2014 - February 2015 | Country</p>
-                    <ul>
-                        <li>
+                    <h4 class="company__exp-prof">Manager <span>BestUA Corp.</span></h4>
+                    <p class="company__exp-period">June 2014 - February 2015 <span>|</span> Country</p>
+                    <ul class="company__duties-list">
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Risus commodo viverra maecenas.
                         </li>
-                        <li>
+                        <li class="company__duties__list-item">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
                         </li>
                     </ul>
@@ -118,8 +120,10 @@
             <div class="sidebar__content">
                 <div class="contacts">
                     <h3 class="contacts__title">Contacts</h3>
-                    <p class="contacts__item"><span class="contacts__type">C: </span><a class="contacts__link" href="tel:+388888888888">+38 888 888 88 88</a></p>
-                    <p class="contacts__item"><span class="contacts__type">E: </span><a class="contacts__link" href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
+                    <p class="contacts__item"><span class="contacts__type">C: </span><a class="contacts__link"
+                            href="tel:+388888888888">+38 888 888 88 88</a></p>
+                    <p class="contacts__item"><span class="contacts__type">E: </span><a class="contacts__link"
+                            href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
                 </div>
                 <div class="techskills">
                     <h3 class="techskills__title">Tech Skills</h3>
