done with day 5

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 </div>
                 <div class="educ">
                     <div>
-                        <h3>Education</h3>
+                        <h3 class="educ__title">Education</h3>
 
-                        <h4>National University of Management</h4>
-                        <p><b>Management</b></p>
-                        <p>June 2014 - February 2015 | Country</p>
+                        <h4 class="educ__univers">National University of Management</h4>
+                        <p class="educ__facult"><b>Management</b></p>
+                        <p class="educ__period">June 2014 - February 2015 <span>|</span> Country</p>
 
                     </div>
 
