--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         </div>
         <aside class="sidebar">
-            <img src="img/Frame 1.png" alt="photo" width="370">
+            <img src="img/photo.jpg" alt="photo" width="370">
 
             <div class="sidebar__content">
                 <div class="contacts">
