--- a/index.html
+++ b/index.html
@@ -1,177 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="wrap">
-        <div class="main">
-            <div class="myInfo">
-                <h2 class="my__profession">Front-End Developer</h2>
-                <h1 class="my__name">Krasulia Yulii</h1>
-                <p class="my__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-                    accumsan lacus vel facilisis. </p>
-            </div>
-
-            <div class="myProjects">
-                <h3 class="myProjects__title">Projects</h3>
-                <ol class="myProjects__list">
-                    <li class="myProjects__item">
-                        <a class="myProjects__item-link" href="https://hellen.p.goit.global/" target="_blank">https://hellen.p.goit.global/</a>
-                        <span class="myProjects__item-tech">...................... [ HTML5, CSS3 ]</span>
-                    </li>
-                    <li class="myProjects__item">
-                        <a class="myProjects__item-link" href="https://cryptohub.p.goit.global/" target="_blank">https://cryptohub.p.goit.global/</a>
-                        <span class="myProjects__item-tech">............. [ JavaScript ]</span>
-                    </li>
-                    <li class="myProjects__item">
-                        <a class="myProjects__item-link" href="https://kidslike.p.goit.global/" target="_blank">https://kidslike.p.goit.global/</a>
-                        <span class="myProjects__item-tech">................... [ React.js, Node.js ]</span>
-                    </li>
-
-                </ol>
-            </div>
-            <div class="company">
-                <h3 class="company__exp-title">Work Experience</h3>
-                <div class="company__one">
-                    <h4 class="company__exp-prof">Front-End Developer <span>Freelance</span></h4>
-                    <p class="company__exp-period">September 2019 - up to now <span>|</span> Country</p>
-                    <ul class="company__duties-list">
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Risus commodo viverra maecenas.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
-                        </li>
-                    </ul>
-                </div>
-                <div class="company__two">
-                    <h4 class="company__exp-prof">Manager <span>Banderogusak & Co.</span></h4>
-                    <p class="company__exp-period">March 2015 - October 2018 <span>|</span> Country</p>
-                    <ul class="company__duties-list">
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Risus commodo viverra maecenas.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
-                        </li>
-                    </ul>
-                </div>
-                <div class="company__three">
-                    <h4 class="company__exp-prof">Manager <span>BestUA Corp.</span></h4>
-                    <p class="company__exp-period">June 2014 - February 2015 <span>|</span> Country</p>
-                    <ul class="company__duties-list">
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Risus commodo viverra maecenas.
-                        </li>
-                        <li class="company__duties__list-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
-                        </li>
-                    </ul>
-                </div>
-                <div class="educ">
-                    <div>
-                        <h3 class="educ__title">Education</h3>
-
-                        <h4 class="educ__univers">National University of Management</h4>
-                        <p class="educ__facult"><b>Management</b></p>
-                        <p class="educ__period">June 2014 - February 2015 <span>|</span> Country</p>
-
-                    </div>
-
-                </div>
-            </div>
-
+      <div class="main">
+        <div class="myInfo">
+          <h2 class="my__profession">Front-End Developer</h2>
+          <h1 class="my__name">Krasulia Yulii</h1>
+          <p class="my__descr">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+            accumsan lacus vel facilisis.
+          </p>
         </div>
-        <aside class="sidebar">
-            <img src="img/photo.jpg" alt="photo" width="370">
 
-            <div class="sidebar__content">
-                <div class="contacts">
-                    <h3 class="contacts__title">Contacts</h3>
-                    <p class="contacts__item"><span class="contacts__type">C: </span><a class="contacts__link"
-                            href="tel:+388888888888">+38 888 888 88 88</a></p>
-                    <p class="contacts__item"><span class="contacts__type">E: </span><a class="contacts__link"
-                            href="mailto:t.goitinskiy@gmail.com">t.goitinskiy@gmail.com</a></p>
-                </div>
-                <div class="techskills">
-                    <h3 class="techskills__title">Tech Skills</h3>
-                    <ul class="skills__list">
-                        <li class="skills__list-item">
-                            HTML5
-                        </li>
-                        <li class="skills__list-item">
-                            CSS3
-                        </li>
-                        <li class="skills__list-item">
-                            GIT
-                        </li>
-                        <li class="skills__list-item">
-                            Webpack
-                        </li>
-                        <li class="skills__list-item">
-                            JavaScript
-                        </li>
-                        <li class="skills__list-item">
-                            React.js
-                        </li>
-                        <li class="skills__list-item">
-                            Node.js
-                        </li>
-                    </ul>
-                </div>
-                <div class="softskills">
-                    <h3 class="softskills__title">Soft Skills</h3>
-                    <ul class="softskills__list">
-                        <li class="softskills__list-item">
-                            Scrum
-                        </li>
-                        <li class="softskills__list-item">
-                            Agile
-                        </li>
-                        <li class="softskills__list-item">
-                            GTD
-                        </li>
-                        <li class="softskills__list-item">
-                            Teamwork
-                        </li>
-                    </ul>
-                </div>
+        <div class="myProjects">
+          <h3 class="myProjects__title">Projects</h3>
+          <ol class="myProjects__list">
+            <li class="myProjects__item">
+              <a
+                class="myProjects__item-link"
+                href="https://hellen.p.goit.global/"
+                target="_blank"
+                >https://hellen.p.goit.global/</a
+              >
+              <span class="myProjects__item-tech"
+                >...................... [ HTML5, CSS3 ]</span
+              >
+            </li>
+            <li class="myProjects__item">
+              <a
+                class="myProjects__item-link"
+                href="https://cryptohub.p.goit.global/"
+                target="_blank"
+                >https://cryptohub.p.goit.global/</a
+              >
+              <span class="myProjects__item-tech"
+                >............. [ JavaScript ]</span
+              >
+            </li>
+            <li class="myProjects__item">
+              <a
+                class="myProjects__item-link"
+                href="https://kidslike.p.goit.global/"
+                target="_blank"
+                >https://kidslike.p.goit.global/</a
+              >
+              <span class="myProjects__item-tech"
+                >................... [ React.js, Node.js ]</span
+              >
+            </li>
+          </ol>
+        </div>
+        <div class="company">
+          <h3 class="company__exp-title">Work Experience</h3>
+          <div class="company__one">
+            <h4 class="company__exp-prof">
+              Front-End Developer <span>Freelance</span>
+            </h4>
+            <p class="company__exp-period">
+              September 2019 - up to now <span>|</span> Country
+            </p>
+            <ul class="company__duties-list">
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </li>
+              <li class="company__duties__list-item">
+                Risus commodo viverra maecenas.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </li>
+            </ul>
+          </div>
+          <div class="company__two">
+            <h4 class="company__exp-prof">
+              Manager <span>Banderogusak & Co.</span>
+            </h4>
+            <p class="company__exp-period">
+              March 2015 - October 2018 <span>|</span> Country
+            </p>
+            <ul class="company__duties-list">
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </li>
+              <li class="company__duties__list-item">
+                Risus commodo viverra maecenas.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </li>
+            </ul>
+          </div>
+          <div class="company__three">
+            <h4 class="company__exp-prof">Manager <span>BestUA Corp.</span></h4>
+            <p class="company__exp-period">
+              June 2014 - February 2015 <span>|</span> Country
+            </p>
+            <ul class="company__duties-list">
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </li>
+              <li class="company__duties__list-item">
+                Risus commodo viverra maecenas.
+              </li>
+              <li class="company__duties__list-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </li>
+            </ul>
+          </div>
+          <div class="educ">
+            <div>
+              <h3 class="educ__title">Education</h3>
+
+              <h4 class="educ__univers">National University of Management</h4>
+              <p class="educ__facult"><b>Management</b></p>
+              <p class="educ__period">
+                June 2014 - February 2015 <span>|</span> Country
+              </p>
             </div>
-
-        </aside>
+          </div>
+        </div>
+      </div>
+      <aside class="sidebar">
+        <img class="my-photo" src="img/photo.jpg" alt="photo" width="370" />
+        <div class="sidebar__content">
+          <div class="contacts">
+            <h3 class="contacts__title">Contacts</h3>
+            <p class="contacts__item">
+              <span class="contacts__type">C: </span
+              ><a class="contacts__link" href="tel:+388888888888"
+                >+38 888 888 88 88</a
+              >
+            </p>
+            <p class="contacts__item">
+              <span class="contacts__type">E: </span
+              ><a class="contacts__link" href="mailto:t.goitinskiy@gmail.com"
+                >t.goitinskiy@gmail.com</a
+              >
+            </p>
+          </div>
+          <div class="techskills">
+            <h3 class="techskills__title">Tech Skills</h3>
+            <ul class="skills__list">
+              <li class="skills__list-item">HTML5</li>
+              <li class="skills__list-item">CSS3</li>
+              <li class="skills__list-item">GIT</li>
+              <li class="skills__list-item">Webpack</li>
+              <li class="skills__list-item">JavaScript</li>
+              <li class="skills__list-item">React.js</li>
+              <li class="skills__list-item">Node.js</li>
+            </ul>
+          </div>
+          <div class="softskills">
+            <h3 class="softskills__title">Soft Skills</h3>
+            <ul class="softskills__list">
+              <li class="softskills__list-item">Scrum</li>
+              <li class="softskills__list-item">Agile</li>
+              <li class="softskills__list-item">GTD</li>
+              <li class="softskills__list-item">Teamwork</li>
+            </ul>
+          </div>
+        </div>
+      </aside>
     </div>
-</body>
-
+  </body>
 </html>
